fix: image in header and align txt in about me

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -300,9 +300,66 @@ section{
   }
 article{
   width: 100%;
-  height: 100px;
   display: flex;
+  flex-direction: column;
+  color: white;
+  margin-top: 298px;
   border: 1px solid white;
+}
+.align-myportifólio{
+display: flex;
+align-items: last baseline;
+margin-left: 235px;
+gap: 90px;
+font-size: 64px;
+font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+border: 1px solid white;
+}
+
+
+
+
+.align-myportifólio >p{
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 24px;
+}
+.align-button2{ 
+   margin-left: 235px;
+   margin-top: 90px;
+   border: 1px solid white;
+}
+.align-button2 > button{
+  width: 125px;
+  height: 65px;
+  border-radius: 20px;
+  background-color: black;
+  color: white;
+  border-color: white;
+  font-size: 24px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.alignall-square{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+padding-top: 147px;
+}
+.square{
+  width: 340px;
+  height: 250px;
+  border-radius: 20px;
+  border: 1px solid white;
+  background-color: white;
+}
+
+.square1{
+  width: 340px;
+  height: 250px;
+  border-radius: 20px;
+  border: 1px solid white;
+  margin-top: 150px;
+  background-color: white;
 }
 
 @media (max-width: 448px){
